--- a/package.json
+++ b/package.json
@@ -1,30 +1,41 @@
 {
-  "name": "react-tutorial",
+  "name": "react-tut",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
-  "scripts": {
-    "start": "webpack-dev-server"
-  },
-  "author": "",
-  "license": "ISC",
+  "repository": {},
+  "license": "MIT",
   "devDependencies": {
-    "babel-cli": "^6.9.0",
-    "babel-core": "^6.9.0",
-    "babel-loader": "^6.2.4",
-    "babel-preset-es2015": "^6.9.0",
-    "babel-preset-react": "^6.5.0",
-    "css-loader": "^0.25.0",
-    "eslint": "^3.10.0",
+    "autoprefixer": "^6.7.2",
+    "babel-core": "^6.22.1",
+    "babel-loader": "^6.2.10",
+    "babel-plugin-transform-object-rest-spread": "^6.22.0",
+    "babel-plugin-transform-react-jsx": "^6.22.0",
+    "css-loader": "^0.26.1",
+    "eslint": "^3.14.0",
+    "eslint-config-airbnb": "^14.0.0",
     "eslint-loader": "^1.6.1",
-    "eslint-plugin-react": "^6.6.0",
-    "react": "^15.1.0",
-    "react-dom": "^15.1.0",
+    "eslint-plugin-import": "^2.2.0",
+    "eslint-plugin-jsx-a11y": "^3.0.2",
+    "eslint-plugin-react": "^6.9.0",
+    "postcss-loader": "^1.2.2",
+    "postcss-smart-import": "^0.6.7",
+    "precss": "^1.4.0",
     "style-loader": "^0.13.1",
-    "webpack": "^1.13.1",
     "webpack-dev-server": "^1.16.2"
   },
   "dependencies": {
-    "eslint": "^3.10.0"
+    "axios": "^0.15.3",
+    "react": "^15.4.2",
+    "react-dom": "^15.4.2",
+    "react-redux": "^5.0.2",
+    "redux": "^3.6.0",
+    "redux-logger": "^2.7.4",
+    "redux-thunk": "^2.2.0",
+    "webpack": "beta",
+    "webpack-validator": "^2.3.0"
+  },
+  "scripts": {
+    "build": "webpack",
+    "start": "webpack-dev-server"
   }
 }
