--- a/package.json
+++ b/package.json
@@ -32,7 +32,9 @@
     "redux-logger": "^2.7.4",
     "redux-thunk": "^2.2.0",
     "webpack": "beta",
-    "webpack-validator": "^2.3.0"
+    "webpack-validator": "^2.3.0",
+    "intl-messageformat": "^1.3.0",
+    "javascript-time-ago": "^0.4.7"
   },
   "scripts": {
     "build": "webpack",
