--- a/package.json
+++ b/package.json
@@ -25,6 +25,9 @@
   "dependencies": {
     "axios": "^0.15.3",
     "eslint": "^3.15.0",
+    "intl-messageformat": "^1.3.0",
+    "javascript-time-ago": "^0.4.7",
+    "moment": "^2.17.1",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
     "react-redux": "^5.0.2",
@@ -32,9 +35,7 @@
     "redux-logger": "^2.7.4",
     "redux-thunk": "^2.2.0",
     "webpack": "beta",
-    "webpack-validator": "^2.3.0",
-    "intl-messageformat": "^1.3.0",
-    "javascript-time-ago": "^0.4.7"
+    "webpack-validator": "^2.3.0"
   },
   "scripts": {
     "build": "webpack",
