--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,9 +1,13 @@
 {
   "extends": "airbnb",
+  "env": {
+    "browser": true
+  },
   "plugins": [
     "react",
     "jsx-a11y",
-    "import"
+    "import",
+    "compat"
   ],
   "rules": {
     "comma-dangle": "off",
