--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-tut",
+  "name": "react-todo",
   "version": "1.0.0",
   "main": "index.js",
   "repository": {},
@@ -13,6 +13,7 @@
     "css-loader": "^0.26.1",
     "eslint-config-airbnb": "^14.1.0",
     "eslint-loader": "^1.6.1",
+    "eslint-plugin-compat": "^1.0.2",
     "eslint-plugin-import": "^2.2.0",
     "eslint-plugin-jsx-a11y": "^4.0.0",
     "eslint-plugin-react": "^6.9.0",
@@ -38,5 +39,6 @@
   "scripts": {
     "build": "webpack",
     "start": "webpack-dev-server"
-  }
+  },
+  "browserslist": ["last 1 versions", "not ie <= 8"]
 }
