--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
     "react-redux": "^5.0.2",
+    "react-router-dom": "^4.0.0",
     "redux": "^3.6.0",
     "redux-logger": "^2.7.4",
     "redux-thunk": "^2.2.0",
@@ -40,5 +41,8 @@
     "build": "webpack",
     "start": "webpack-dev-server"
   },
-  "browserslist": ["last 1 versions", "not ie <= 8"]
+  "browserslist": [
+    "last 1 versions",
+    "not ie <= 8"
+  ]
 }
